--- a/app/src/main/res/layout/activity_myrefrigerator_detail.xml
+++ b/app/src/main/res/layout/activity_myrefrigerator_detail.xml
@@ -62,13 +62,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="My Refrigerator"
-        android:textSize="24sp"
+        android:textColor="#000000"
+        android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.06"
+        app:layout_constraintHorizontal_bias="0.235"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.05" />
+        app:layout_constraintVertical_bias="0.082" />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -77,7 +78,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@mipmap/ic_launcher"
-        tools:layout_editor_absoluteY="116dp" />
+        tools:layout_editor_absoluteY="175dp" />
 
     <TextView
         android:id="@+id/textView45"
@@ -105,5 +106,19 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView50" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="30dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline16"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_end="678dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
