--- a/app/src/main/res/layout/activity_refrigerator.xml
+++ b/app/src/main/res/layout/activity_refrigerator.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CatSearchResultActivity">
+    tools:context=".RefrigeratorActivity">
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineTop"
         android:layout_width="wrap_content"
@@ -31,61 +31,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_end="60dp" />
-
+        app:layout_constraintGuide_end="54dp" />
     <TextView
-        android:id="@+id/txt_cats"
+        android:id="@+id/txt_ref"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cat's"
+        android:text="My Refrigerator"
         android:textColor="@color/black"
         android:textSize="40sp"
         app:layout_constraintStart_toStartOf="@id/guidelineStart"
-        app:layout_constraintTop_toTopOf="@id/guidelineTop" />
-    <TextView
-        android:id="@+id/txt_search"
-        android:layout_width="350dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="70dp"
-        android:background="@drawable/edge"
-        android:ems="10"
-        android:text="Search"
-        android:padding="10dp"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
-        app:layout_constraintStart_toStartOf="@id/guidelineStart"
-        app:layout_constraintTop_toTopOf="@+id/guidelineTop" />
+        app:layout_constraintTop_toTopOf="@id/guidelineTop"/>
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineMid1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="186dp" />
-
-    <TextView
-        android:id="@+id/txt_result"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="All Results"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="@id/guidelineStart"
-        app:layout_constraintTop_toTopOf="@id/guidelineMid1" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineMid2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="218dp" />
+        app:layout_constraintGuide_begin="107dp" />
     <ScrollView
         android:layout_width="350dp"
-        android:layout_height="452dp"
+        android:layout_height="568dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
         app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
         app:layout_constraintStart_toStartOf="@id/guidelineStart"
-        app:layout_constraintTop_toTopOf="@id/guidelineMid2">
+        app:layout_constraintTop_toTopOf="@id/guidelineMid1">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -119,12 +88,12 @@
                         android:textColor="@color/black"
                         android:textSize="24sp"/>
                     <TextView
-                        android:id="@+id/txt_mat1"
+                        android:id="@+id/txt_storage1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
-                        android:text="a, b, c ..."
-                        android:textColor="#7A7A7A"
+                        android:text="D-3"
+                        android:textColor="#373737"
                         android:textSize="24sp"/>
                 </LinearLayout>
             </LinearLayout>
@@ -156,12 +125,12 @@
                         android:textColor="@color/black"
                         android:textSize="24sp"/>
                     <TextView
-                        android:id="@+id/txt_mat2"
+                        android:id="@+id/txt_storage2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
-                        android:text="d, e, f ..."
-                        android:textColor="#7A7A7A"
+                        android:text="D-4"
+                        android:textColor="#373737"
                         android:textSize="24sp"/>
                 </LinearLayout>
             </LinearLayout>
@@ -193,35 +162,15 @@
                         android:textColor="@color/black"
                         android:textSize="24sp"/>
                     <TextView
-                        android:id="@+id/txt_mat3"
+                        android:id="@+id/txt_storage3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
-                        android:text="g, h, i ..."
-                        android:textColor="#7A7A7A"
+                        android:text="D-3"
+                        android:textColor="#373737"
                         android:textSize="24sp"/>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
-    <ImageButton
-        android:id="@+id/imgBtn_home"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:backgroundTint="#00FFFFFF"
-        android:scaleType="centerInside"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@id/guidelineStart"
-        app:layout_constraintTop_toTopOf="@id/guidelineBottom"
-        app:srcCompat="@drawable/home" />
-    <ImageButton
-        android:id="@+id/imgBtn_user"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:backgroundTint="#00FFFFFF"
-        android:scaleType="centerInside"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
-        app:layout_constraintTop_toTopOf="@id/guidelineBottom"
-        app:srcCompat="@drawable/user" />
 </androidx.constraintlayout.widget.ConstraintLayout>
